--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			</div>
 			<section id="wdyl">
 				<div id="wdyl-container">
-					<h1 id="stmt">What [] do you like?</h1>
+					<h1 id="stmt"><!--What [] do you like?--></h1>
 					<form>
 						<input type="text" id="user-input" placeholder="I like:"></form>
 				</div>
