got rotatingwords to work

--- a/index.html
+++ b/index.html
@@ -25,8 +25,12 @@
 			</div>
 			<section id="wdyl">
 				<div id="wdyl-container">
-					<h1 id="stmt"><!--What [] do you like?--></h1>
-					<form>
+				<ul>
+					<li><h1 class="stmt">What </h1></li>
+					<li><h1 class="changeme stmt"> artist  </h1></li>
+					<li><h1 class="stmt"> do you like?</h1></li>
+				</ul>
+				<form>
 						<input type="text" id="user-input" placeholder="I like:"></form>
 				</div>
 			</section>
