cleaning up html for new section

--- a/index.html
+++ b/index.html
@@ -23,17 +23,18 @@
 				<h2 id="mini-desc">RecommendMe gives you recommendations based on what you like.</h2>
 				<i class="fa fa-angle-double-down fa-3x" id="down"></i>
 			</div>
-			<section id="wdyl">
-				<div id="wdyl-container">
+		</section>
+		<section id="wdyl">
+			<div id="wdyl-container">
 				<ul>
 					<li><h1 class="stmt">What </h1></li>
 					<li><h1 class="changeme stmt"> artist  </h1></li>
 					<li><h1 class="stmt"> do you like?</h1></li>
 				</ul>
 				<form>
-						<input type="text" id="user-input" placeholder="I like:"></form>
-				</div>
-			</section>
+					<input type="text" id="user-input" placeholder="I like:">
+				</form>
+			</div>
 		</section>
 	</div>
 </body>
