--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
 	<!-- Stylesheets -->
 	<link href="css/style.css" rel="stylesheet">
 	<link href="css/normalize.css" rel="stylesheet">
+	<!-- Blueprint Grid Stylesheet -->
+	<link rel="stylesheet" type="text/css" href="css/component.css">
+	<!-- Google Font -->
+	<link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow' rel='stylesheet' type='text/css'>
 	<!-- Font Awesome -->
 	<link href="css/font-awesome.min.css" rel="stylesheet">
 	<!-- Javascript/jQ -->
 	<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="js/app.js"></script>
-	<!-- Google Font -->
-	<link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<div id="overall-container">
