attempted to fix problem, no success but gonna keep trying. Implemented focus to input after arrow is pressed to allow for typing straight up

--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
 					<li><h1 class="stmt"> do you like?</h1></li>
 				</ul>
 				<form>
-					<input type="text" id="user-input" placeholder="I like:">
+					<input type="text" class="user-input" placeholder="I like:">
 				</form>
 			</div>
 		</section>
 		<section id="grid-section">
+		<div id="user-enjoys"></div>
 			<!-- Grid Code Below -->
 			   <ul class="thumbs">
             <li><a href="#thumb1" class="thumbnail" style="background-image: url('images/thumb1.jpg')">
