--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<div id="user-enjoys"></div>
 			<!-- Grid Code Below -->
 			   <ul class="thumbs">
-            <li><a href="#thumb1" class="thumbnail" style="background-image: url('images/thumb1.jpg')">
+           <!-- <li><a href="#thumb1" class="thumbnail" style="background-image: url('images/thumb1.jpg')">
                 <h4>Web development</h4><span class="description">Get the latest technologies</span></a>
             </li>
             <li>
@@ -85,11 +85,11 @@
             </li>
             <li>
                 <a href="#thumb13" class="thumbnail" style="background-image: url('images/thumb14.jpg')"><h4>Web design</h4><span class="description">Aenean condimentum diam nibh</span></a>
-            </li>
+            </li> -->
         </ul>
 
         <div class="portfolio-content">
-            <div id="thumb1">
+          <!--  <div id="thumb1">
                 <div class="media"><iframe src="//player.vimeo.com/video/69666609?byline=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div>
                 <h1>Web development</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer mollis nisi sit amet metus venenatis, ut congue turpis aliquet. Pellentesque eget elit sollicitudin, feugiat felis in, ornare diam. Morbi blandit sapien nibh, eu pulvinar tortor luctus nec. Aenean lobortis lacus cursus gravida adipiscing. Praesent in odio porta, placerat felis id, viverra est. Nam magna quam, tincidunt eget augue in, aliquet tristique ipsum.</p>
@@ -207,7 +207,7 @@
                 <p>Vestibulum gravida, ante ut consectetur dictum, dolor sapien pretium elit, sed tincidunt augue sem a lorem. Vivamus quis neque pharetra, consequat dolor vel, venenatis urna. Praesent diam quam, fermentum vel tortor eget, pulvinar tincidunt velit.</p>
                 <a href="#" class="btn btn-primary">Learn More</a>
             </div>
-        </div>
+        </div> -->
 		</section>
 	</div>
 </body>
