got bings API working :)

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			</div>
 		</section>
 		<section id="grid-section">
-		<div id="user-enjoys"></div>
+		<!--<div id="user-enjoys"></div>-->
 			<!-- Grid Code Below -->
 		   <ul class="thumbs">
            </ul>
