cleaned up, added buttons

--- a/index.html
+++ b/index.html
@@ -37,7 +37,12 @@
 				</ul>
 				<form>
 					<input type="text" class="user-input" placeholder="I like:">
+					<div class="submit-area">
+						<button class="user-submit">Submit</button>
+					</div>
 				</form>
+				<h3 class="hdiw">How does this work?</h3>
+				<p class="desc">RecommendMe implements Tastekid's recommendation engine using their API. RecommenedMe also utlizes Bing's API to display the images of the recommendation.</p>
 			</div>
 		</section>
 		<section id="grid-section">
