--- a/index.html
+++ b/index.html
@@ -51,7 +51,12 @@
 		   <ul class="thumbs">
            </ul>
 
-        <div class="portfolio-content">
+        <div class="portfolio-content"></div>
+        <div class="spacetosee"></div>
+        <div id="recommendmore">
+        	<form>
+        		<input type="text" class="morelike" placeholder="What else do you like?"><button class="alsolike">Optimize my recommendations!</button>
+        	</form>
         </div>
 		</section>
 	</div>
