Attempting to test fakeloader and cleaned up code

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<link href="css/normalize.css" rel="stylesheet">
 	<!-- Grid stylesheet -->
 	<link href="css/portfolio.jquery.min.css" rel="stylesheet">
+	<!-- Fake Loader StyleSheet -->
+	<link href="css/fakeLoader.css" rel="stylesheet">
 	<!-- Google Font -->
 	<link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow' rel='stylesheet' type='text/css'>
 	<!-- Font Awesome -->
@@ -18,8 +20,11 @@
 	<script src="js/app.js"></script>
 		<!-- Grid JS -->
 		<script src="js/portfolio.jquery.min.js"></script>
+		<!-- Fake Loader -->
+		<script src="js/fakeLoader.min.js"></script>
 </head>
 <body>
+  <div class="fakeloader"></div>
 	<div id="overall-container">
 		<section id="intro">
 			<div class="intro-container">
