--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 			<div class="intro-container">
 				<h1 id="intro-h1">RecommendMe</h1>
 				<h2 id="mini-desc">RecommendMe gives you recommendations based on what you like.</h2>
+				<div id="copyrightrm"><p> &copy; Jeffrey Grinberg</p></div>
 				<i class="fa fa-angle-double-down fa-3x" id="down"></i>
 			</div>
 		</section>
