--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<link href="css/normalize.css" rel="stylesheet">
 	<!-- Grid stylesheet -->
 	<link href="css/portfolio.jquery.min.css" rel="stylesheet">
+	<!--Loader Stylesheet -->
+	
 	<!-- Google Font -->
 	<link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow' rel='stylesheet' type='text/css'>
 	<!-- Font Awesome -->
