implented a loadinig css element

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<link href="css/normalize.css" rel="stylesheet">
 	<!-- Grid stylesheet -->
 	<link href="css/portfolio.jquery.min.css" rel="stylesheet">
-	<!--Loader Stylesheet -->
-	
+	<!-- SpinKit -->
+	<link href="css/spinkit.css" rel="stylesheet">
 	<!-- Google Font -->
 	<link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow' rel='stylesheet' type='text/css'>
 	<!-- Font Awesome -->
@@ -34,19 +34,27 @@
 		</section>
 		<section id="wdyl">
 			<div id="wdyl-container">
-				<ul>
-					<li><h1 class="stmt">What </h1></li>
-					<li><h1 class="changeme stmt"> artist  </h1></li>
-					<li><h1 class="stmt"> do you like?</h1></li>
-				</ul>
-				<form>
-					<input type="text" class="user-input" placeholder="I like:">
-					<div class="submit-area">
-						<button class="user-submit">Submit</button>
-					</div>
-				</form>
-				<h3 class="hdiw">How does this work?</h3>
-				<p class="desc">RecommendMe implements Tastekid's recommendation engine using their API. RecommenedMe also utlizes Bing's API to display the images of the recommendation.</p>
+					<ul>
+						<li><h1 class="stmt">What </h1></li>
+						<li><h1 class="changeme stmt"> artist  </h1></li>
+						<li><h1 class="stmt"> do you like?</h1></li>
+					</ul>
+					<form>
+						<input type="text" class="user-input" placeholder="I like:">
+						<div class="submit-area">
+							<button class="user-submit">Submit</button>
+						</div>
+					</form>
+					<h3 class="hdiw">How does this work?</h3>
+					<p class="desc">RecommendMe implements Tastekid's recommendation engine using their API. RecommenedMe also utlizes Bing's API to display the images of the recommendation.</p>
+					<!-- SpinKit -->
+			<div class="load-holder">
+				<div class="sk-folding-cube">
+				  <div class="sk-cube1 sk-cube"></div>
+				  <div class="sk-cube2 sk-cube"></div>
+				  <div class="sk-cube4 sk-cube"></div>
+				  <div class="sk-cube3 sk-cube"></div>
+				</div>		
 			</div>
 		</section>
 		<section id="grid-section">
