created loading screen

--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 					</form>
 					<h3 class="hdiw">How does this work?</h3>
 					<p class="desc">RecommendMe implements Tastekid's recommendation engine using their API. RecommenedMe also utlizes Bing's API to display the images of the recommendation.</p>
-					<!-- SpinKit -->
+		</section>
+		<section id="grid-section">
+			<!-- SpinKit -->
 			<div class="load-holder">
 				<div class="sk-folding-cube">
 				  <div class="sk-cube1 sk-cube"></div>
@@ -56,8 +58,7 @@
 				  <div class="sk-cube3 sk-cube"></div>
 				</div>		
 			</div>
-		</section>
-		<section id="grid-section">
+			<h3 class="load-message">Generating recommendations for you</h3>
 			<!-- Grid Code Below -->
 		   <ul class="thumbs">
            </ul>
