successfully implemented loading screen

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					<h3 class="hdiw">How does this work?</h3>
 					<p class="desc">RecommendMe implements Tastekid's recommendation engine using their API. RecommenedMe also utlizes Bing's API to display the images of the recommendation.</p>
 		</section>
-		<section id="grid-section">
+		<section id="load-section">
 			<!-- SpinKit -->
 			<div class="load-holder">
 				<div class="sk-folding-cube">
@@ -56,9 +56,11 @@
 				  <div class="sk-cube2 sk-cube"></div>
 				  <div class="sk-cube4 sk-cube"></div>
 				  <div class="sk-cube3 sk-cube"></div>
-				</div>		
+				</div>
+				<h3 class="load-message">Generating recommendations for you</h3>		
 			</div>
-			<h3 class="load-message">Generating recommendations for you</h3>
+		</section>
+		<section id="grid-section">
 			<!-- Grid Code Below -->
 		   <ul class="thumbs">
            </ul>
