Formulated what happens when no recs occur.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
 				  <div class="sk-cube4 sk-cube"></div>
 				  <div class="sk-cube3 sk-cube"></div>
 				</div>
-				<h3 class="load-message">Generating recommendations for you</h3>		
+				<h3 class="load-message">Generating recommendations for you</h3>
+				<h3 class="rec-fail">There are no recommendations similar to this. </h3> 
+				<h3 class="rec-fail">Please try something else. Redirecting you now.</h3>		
 			</div>
 		</section>
 		<section id="grid-section">
@@ -64,7 +66,9 @@
 		   <ul class="thumbs">
            </ul>
 
-        <div class="portfolio-content"></div>
+        <div class="portfolio-content">
+        	<div class="nonsense"></div>
+        </div>
         <div class="spacetosee"></div>
         <div id="recommendmore">
         	<form>
