Alleviated Bing's Too Many Requests
Due to Bing’s new free trial of the API, it can’t handle rapid fire
requests. A typical AJAX call is asynchronous which allows for these
rapid fire requests. I disabled the asynchronous call, which slowed the
requests down to fulfill the desired amounts of results.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<section id="intro">
 			<div class="intro-container">
 				<h1 id="intro-h1">RecommendMe</h1>
-				<h2 id="mini-desc">RecommendMe gives you recommendations based on what you like.</h2>
+				<h2 id="mini-desc">Recommendations based on what you like.</h2>
 				<div id="copyrightrm"><p> &copy; Jeffrey Grinberg</p></div>
 				<i class="fa fa-angle-double-down fa-3x" id="down"></i>
 			</div>
@@ -63,7 +63,7 @@
 						</div>
 					</form>
 					<h3 class="hdiw">How does this work?</h3>
-					<p class="desc">RecommendMe implements Tastekid's recommendation engine using their API. RecommenedMe also utlizes Bing's API to display the images of the recommendation.</p>
+					<p class="desc">RecommendMe implements Tastedive's recommendation engine using their API. RecommenedMe also utlizes Bing's API to display the images of the recommendation.</p>
 		</section>
 		<section id="load-section">
 			<!-- SpinKit -->
